// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkHeading should render correctly with a "id" attribute 1`] = `
<h1
  className="bpk-heading-h1"
  id="my-id"
>
  My heading
</h1>
`;

exports[`BpkHeading should render correctly with a "level" attribute equal to "h1" 1`] = `
<h1
  className="bpk-heading-h1"
  id={null}
>
  My heading
</h1>
`;

exports[`BpkHeading should render correctly with a "level" attribute equal to "h2" 1`] = `
<h2
  className="bpk-heading-h2"
  id={null}
>
  My heading
</h2>
`;

exports[`BpkHeading should render correctly with a "level" attribute equal to "h3" 1`] = `
<h3
  className="bpk-heading-h3"
  id={null}
>
  My heading
</h3>
`;

exports[`BpkHeading should render correctly with a "level" attribute equal to "h4" 1`] = `
<h4
  className="bpk-heading-h4"
  id={null}
>
  My heading
</h4>
`;

exports[`BpkHeading should render correctly with a "level" attribute equal to "h5" 1`] = `
<h5
  className="bpk-heading-h5"
  id={null}
>
  My heading
</h5>
`;

exports[`BpkHeading should render correctly with a "level" attribute equal to "h6" 1`] = `
<h6
  className="bpk-heading-h6"
  id={null}
>
  My heading
</h6>
`;
